<resources>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="signing_in">Đang đăng nhập</string>
    <string name="username">Username (*)</string>
    <string name="insert_your_email">Nhập E-mail của bạn</string>
    <string name="insert_your_username">Nhập username của bạn</string>
    <string name="email_or_username">Địa chỉ email hoặc username (*)</string>
    <string name="email">Email (*)</string>
    <string name="insert_your_email_or_username">Nhập Email hoặc Username của bạn</string>
    <string name="insert_your_password">Nhập mật khẩu của bạn</string>
    <string name="information_will_be_saved_until_signing_out">Thông tin đăng nhập sẽ đươck lưu cho đến khi bạn đăng xuất</string>
    <string name="confirm_your_password">Xác nhận mật khẩu của bạn</string>
    <string name="at_least_6_characters">Tối thiểu 6 ký tự (Yêu cầu có chữ, số, kí tự đặc biệt)</string>
    <string name="email_is_not_valid">Email không hợp lệ</string>
    <string name="password_is_not_valid">Mật khẩu không hợp lệ</string>
    <string name="sending_otp">Đang gửi OTP</string>
    <string name="password">Mật khẩu (*)</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="to_continue">Tiếp tục</string>
    <string name="confirm_to_sign_up">Xác nhận đăng ký</string>
    <string name="continue_with_current_devices">Tiếp tục với các thiết bị được tìm thấy</string>
    <string name="confirm">Xác nhận</string>
    <string name="confirm_otp">Xác nhận mã OTP</string>
    <string name="resend">Gửi lại</string>
    <string name="otp_code_is_false">Mãi OTP không đúng!</string>
    <string name="select_location">Chọn địa điểm</string>
    <string name="please_select_a_location_to_continue">Hãy chọn 1 địa điểm để tiếp tục</string>
    <string name="create_a_new_location">Tạo địa điểm mới</string>
    <string name="edit_location">Chỉnh sửa địa điểm</string>
    <string name="add_new_input">Thêm đầu vào mới</string>
    <string name="confirm_to_delete">Xác nhận xóa</string>
    <string name="name_location_after">Bạn nên đặt tên ví dụ như: nhà xưởng, vườn, ... </string>
    <string name="insert_key_and_type_to_add_input">Nhập key và kiểu để tạo đầu vào</string>
    <string name="sorting_out_helps_easier_to_manage">Phân loại giúp bạn dễ quản lý hơn khi có nhiều địa điểm</string>
    <string name="you_can_change_later">Bạn vẫn có thể chỉnh sửa về sau</string>
    <string name="save_location">Lưu địa điểm</string>
    <string name="sign_in_by_another_account">Đăng nhập tài khoản khác </string>
    <string name="delete_location">Xóa địa điểm</string>
    <string name="location">Địa điểm</string>
    <string name="get">Get</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="get_otp_code">Nhận mã xác thực</string>
    <string name="otp_code_will_be_sent_to_your_email">Mã xác thực sẽ được gửi tới email của bạn</string>
    <string name="reset_password_for">Thay đổi mật khẩu cho </string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="list_of_available_locations">Danh sách địa điểm đã có</string>
    <string name="cancel">Hủy</string>
    <string name="save">Lưu</string>
    <string name="save_config">Lưu thiết lập</string>
    <string name="output">Đầu ra</string>
    <string name="output_value">Giá trị đầu ra</string>
    <string name="table_type">Bảng</string>
    <string name="scan_gateway">Quét thiết bị trung tâm</string>
    <string name="scan_sub_device">Quét thiết bị đầu cuối</string>
    <string name="gateway_info">Thông tin thiết bị trung tâm</string>
    <string name="add_gateway">Thêm thiết bị trung tâm</string>
    <string name="devices_found">Các thiết bị được tìm thấy</string>
    <string name="number_of_device_found">Số lượng thiết bị đã tìm thấy</string>
    <string name="number_of_device_selected">Số lượng thiết bị đã chọn</string>
    <string name="make_sure_that_gateway_is_plugged">Hãy đảm đã cắm nguồn thiết bị trung tâm</string>
    <string name="scanning_gateway">Đang quét thiết bị trung tâm</string>
    <string name="scanning_device">Đang quét thiết bị</string>
    <string name="available_gateway">Thiết bị trung tâm khả dụng</string>
    <string name="rescan_device">Quét lại thiết bị</string>
    <string name="rescan_wifi">Quét lại mạng WiFi</string>
    <string name="connect_to_wifi_manually">Kết nối mạng WiFi thủ công</string>
    <string name="list_of_gateways_that_belong_to_location">Danh sách thiết bị trung tâm thuộc địa điểm</string>
    <string name="main_fragment">Màn hình chính</string>
    <string name="connect_to_wifi">Kết nối mạng WiFi</string>
    <string name="available_wifi">Mạng WiFi khả dụng</string>
    <string name="wifi_info">Thông tin WiFi</string>
    <string name="wifi">Mạng wifi</string>
    <string name="cable_connectivity">Kết nối mạng có dây</string>
    <string name="insert_wifi_label">Nhập tên Wifi</string>
    <string name="insert_wifi_password">Nhập mật khẩu wifi</string>
    <string name="connect">Kết nối</string>
    <string name="assign_gateway_to_group">Thêm thiết bị trung tâm vào nhóm</string>
    <string name="helpful_when_lots_of_gateway">Giúp bạn dễ quản lý hơn khi có nhiều thiết bị trung tâm</string>
    <string name="change_device_label_helpful_to_manage">Đổi tên thiết bị trung tâm giúp bạn dễ quản lý về sau</string>
    <string name="available_group">Nhóm khả dụng</string>
    <string name="device_has_not_been_assigned_to_group">Chưa thiết lập</string>
    <string name="continue_without_assignment_to_group">Tiếp tục mà không thêm nhóm</string>
    <string name="create_new_group">Tạo nhóm mới</string>
    <string name="undefined">Chưa xác định</string>
    <string name="please_select_device_type">Vui lòng chọn loại thiết bị</string>
    <string name="save_group">Lưu nhóm</string>
    <string name="add_another_gateway">Thêm thiết bị trung tâm khác</string>
    <string name="add_another_device">Thêm thiết bị khác</string>
    <string name="finish">Hoàn thành</string>
    <string name="list_of_flow_scenario">Danh sách Flow Scenario</string>
    <string name="list_of_using_flow_scenario">Danh sách Flow Scenario đang sử dụng</string>
    <string name="list_of_functioning_flow_scenario">Danh sách Flow Scenario đang hoạt động</string>
    <string name="you_dont_have_any_scenario">Bạn chưa có Flow Scenario nào</string>
    <string name="create_flow_scenario">Tạo Flow Scenario</string>
    <string name="create_blank_flow_scenario">Tạo Flow Scenario trống</string>
    <string name="connect_box_to_create_a_flow_scenario">Hãy nối các box để tạo thành Flow Scenario</string>
    <string name="input_event">Sự kiện đầu vào</string>
    <string name="select_device_from_list">Chọn thiết bị từ danh sách</string>
    <string name="box_condition">Box điều kiện</string>
    <string name="box_action">Box hành động</string>
    <string name="general_condition">Điều kiện chung</string>
    <string name="state_from_device">Trạng thái từ thiết bị</string>
    <string name="config_new_input">Thiết lập đầu vào mới</string>
    <string name="device_type">Loại thiết bị</string>
    <string name="type">Kiểu</string>
    <string name="control_action">Hành động điều khiển</string>
    <string name="attribute_of_device">Thuộc tính thiết bị</string>
    <string name="compared_value">Giá trị cần so sánh</string>
    <string name="comparing_value_start">Giá trị so sánh đầu</string>
    <string name="comparing_value_end">Giá trị so sánh cuối</string>
    <string name="compared_input">Đầu vào cần so sánh</string>
    <string name="comparision_type">Loại so sánh</string>
    <string name="config_action_call_api">Thiết lập hành động kết nối với API</string>
    <string name="control_one_or_multiple_devices">Điều khiển đơn hoặc nhiều thiết bị</string>
    <string name="attribute">Thuộc tính</string>
    <string name="choose_every_attributes">Chọn tất cả các thuộc tính</string>
    <string name="choose_device">Chọn thiết bị</string>
    <string name="choose_device_type">Chọn loại thiết bị</string>
    <string name="device_type_can_be_added">Các loại thiết bị có thể thêm vào </string>
    <string name="later">Để sau</string>
    <string name="forward_json">Forward JSON</string>
    <string name="table">Bảng</string>
    <string name="json">JSON</string>
    <string name="json_format">Json Format</string>
    <string name="export_value_form">Export Value form</string>
    <string name="required_output">Thiết lập Giá trị cần lấy</string>
    <string name="device_list">Danh sách thiết bị</string>
    <string name="header_list">Danh sách header</string>
    <string name="you_can_add_and_delete_header">Bạn có thể thêm và xóa các header tại đây</string>
    <string name="you_can_add_and_delete_value">Bạn có thể thêm và xóa các giá trị tại đây</string>
    <string name="no_device_found">Không tìm thấy thiết bị</string>
    <string name="finishing_adding_devices">Hoàn thành thêm thiết bị</string>
    <string name="you_can_continue_or_add_another_device">Bạn có thể tiếp tục hoặc thêm thiết bị khác</string>
    <string name="config">Thiết lập</string>
    <string name="condition">Điều kiện</string>
    <string name="input">Đầu vào</string>
    <string name="input_type">Loại đầu vào</string>
    <string name="input_from_previous_box">Đầu vào từ box trước</string>
    <string name="input_from_new_device">Đầu vào từ thiết bị mới</string>
    <string name="add_input">Thêm đầu vào</string>
    <string name="condition_general">Điều kiện chung</string>
    <string name="configing_helps_flow_create_condition">Thiết lập giúp Flow tạo ra điều kiện</string>
    <string name="configing_helps_flow_create_action">Thiết lập giúp Flow tạo ra hành động</string>
    <string name="select_box_type_to_continue">Chọn 1 loại box để tiếp tục Flow</string>
    <string name="select_next_action">Chọn hành động tiếp theo</string>
    <string name="configing_helps_flow_create_more_actions">Thiết lập giúp Flow tạo ra được nhiều hành động</string>
    <string name="create_box_and_config">Tạo box và lưu thiết lập</string>
    <string name="config_header">Chỉnh sửa header</string>
    <string name="insert_key">Nhập Key</string>
    <string name="key">Key</string>
    <string name="insert_value">Nhập Value</string>
    <string name="body">Body</string>
    <string name="timeout_time">Thời gian timeout mỗi lượt (ms)</string>
    <string name="event_from_device">Sự kiện từ thiết bị</string>
    <string name="receive_event_from_selected_device">Nhận sự kiện từ thiết bị được chọn</string>
    <string name="all_of_output_can_be_used_in_the_next_box">Toàn bộ giá trị đầu ra sẽ được chuyển cho box sau</string>
    <string name="output_will_be_available_after_being_configed">Đầu ra sẽ có khi thiết bị được thiết lập</string>
    <string name="this_kind_of_boxes_dont_have_output">Loại box này không có giá trị đầu ra</string>
    <string name="you_dont_have_any_value">Bạn chưa có giá trị nào</string>
    <string name="add_value">Thêm giá trị</string>
    <string name="event_from_mqtt">Sự kiện từ MQTT</string>
    <string name="light">Đèn</string>
    <string name="switch_device_type">Công tắc</string>
    <string name="plug">Ổ cắm</string>
    <string name="config_device">Thiết lập cấu hình thiết bị</string>
    <string name="syncing_devices_to_cloud">Đang đồng bộ thiết bị lên đám mây</string>
    <string name="wait_a_little">Hãy chờ 1 chút</string>
    <string name="devices_are_being_added">Thiết bị đang được thêm</string>
    <string name="device_label">Tên thiết bị</string>
    <string name="group_of_device">Nhóm thiết bị</string>
    <string name="you_should_add_device_to_a_group">Bạn nên thêm thiết bị vào 1 nhóm cụ thể ví dụ như: vườn, nhà xưởng... để dễ dàng quản lý về sau</string>
    <string name="adding_zigbee_devices_warning">Lưu ý: Bạn chỉ có thể hủy các thiết bị chưa được thêm thành công</string>
</resources>