<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="145dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/text_headline5" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/bg_text_input_gray"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:hintEnabled="false"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_text_input_gray"
                    android:paddingVertical="14dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/insert_your_email_or_username"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/email_or_username"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_caption"
                android:paddingStart="15dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_text_input_gray"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:hintEnabled="false"
                android:paddingTop="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_text_input_gray"
                    android:hint="@string/insert_your_password"
                    android:paddingVertical="14dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="13sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/password"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/text_caption"
                android:paddingStart="15dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/txt_noti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/at_least_6_characters"
            android:textColor="@color/black"
            android:textSize="@dimen/text_overline" />

        <TextView
            android:id="@+id/txt_forgot_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_body2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_emerald"
            android:fontFamily="@font/roboto_bold"
            android:paddingVertical="13dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@drawable/bg_white_stroke_black"
            android:fontFamily="@font/roboto_bold"
            android:paddingVertical="13dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_button" />


    </LinearLayout>
</layout>