<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="45dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_title"
                    android:text="@string/syncing_devices_to_cloud"
                    android:textSize="@dimen/text_headline5"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_screen_small"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_subtitle"
                    android:text="@string/wait_a_little"
                    android:textSize="@dimen/text_body2"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_screen_super_small"
                    android:textAlignment="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_subtile_1"
                android:text="@string/devices_are_being_added"
                android:textSize="@dimen/text_overline"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:id="@+id/rv_syncing_devices"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ln_adding"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adding_zigbee_devices_warning"
                    android:textSize="@dimen/text_body2"
                    android:textAlignment="center"
                    android:textColor="@color/warning"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancel"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:paddingVertical="13dp"
                    android:background="@drawable/bg_white_stroke_black"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_button"
                    android:layout_marginTop="@dimen/space_screen_small"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ln_finishing"
                android:orientation="vertical"
                android:visibility="gone">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_finish"
                    android:text="@string/finish"
                    android:textColor="@color/white"
                    android:paddingVertical="13dp"
                    android:background="@color/emerald"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_button"
                    android:layout_marginTop="@dimen/space_screen_small"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_add_another_device"
                    android:text="@string/add_another_device"
                    android:textColor="@color/black"
                    android:paddingVertical="13dp"
                    android:background="@drawable/bg_white_stroke_black"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_button"
                    android:layout_marginTop="@dimen/space_screen_small"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>