<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/space_screen_super_small">
        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_space30dp"
            android:paddingHorizontal="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                android:textSize="@dimen/text_headline5"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_select_a_location_to_continue"
                android:textSize="@dimen/text_body2"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_of_available_locations"
                android:textSize="@dimen/text_body2"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_space50dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/space_screen_small"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_location"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_create"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_space20dp"
                        android:layout_height="@dimen/_space20dp"
                        android:layout_marginEnd="@dimen/space_screen_super_small"
                        android:src="@drawable/ic_add"
                        android:scaleType="centerInside" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_a_new_location"
                        android:textSize="@dimen/text_body2"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_continue"
                android:text="@string/to_continue"
                android:textColor="@color/white"
                android:paddingVertical="13dp"
                android:background="@color/black"
                android:textAllCaps="false"
                android:layout_marginVertical="@dimen/space_screen_small"
                android:textSize="@dimen/text_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_sing_out"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:paddingVertical="13dp"
                android:background="@color/black"
                android:textAllCaps="false"
                android:layout_marginVertical="@dimen/space_screen_small"
                android:textSize="@dimen/text_button"/>
        </LinearLayout>
    </LinearLayout>
</layout>