<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="45dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_device"
                    android:textSize="@dimen/text_headline5"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_screen_small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpful_when_lots_of_gateway"
                    android:textSize="@dimen/text_body2"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_screen_super_small"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/device_label"
                    android:textSize="@dimen/text_overline"
                    android:textColor="@color/black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_label"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_body2"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_text_input_gray"
                    android:paddingHorizontal="13dp"
                    android:paddingVertical="14dp"
                    android:layout_marginTop="6dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_of_device"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/text_overline"
                    android:textColor="@color/black"
                    android:layout_marginTop="12dp"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_group"
                    android:fontFamily="@font/roboto_regular"
                    android:background="@drawable/bg_text_input_gray"
                    android:paddingHorizontal="13dp"
                    android:paddingVertical="14dp"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/you_should_add_device_to_a_group"
                    android:textColor="@color/warning"
                    android:textSize="@dimen/text_overline" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_finish"
                android:text="@string/finish"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:paddingVertical="13dp"
                android:background="@color/emerald"
                android:textAllCaps="false"
                android:textSize="@dimen/text_button"
                android:layout_marginTop="@dimen/space_screen_small"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_add_another_gateway"
                android:text="@string/add_another_gateway"
                android:textSize="@dimen/text_button"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:paddingVertical="13dp"
                android:layout_marginTop="@dimen/space_screen_small"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_white_stroke_black"/>

        </LinearLayout>
    </LinearLayout>

</layout>